# swl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: external.cmake
include/swl/: math.h
include/swl/math/: common.h  mat.h  mat2x2.h  vec.h  vec1.h  vec2.h  vec3.h  vec4.h
include/swl/math/inl/: mat.inl  vec.inl  vec1.inl  vec2.inl  vec3.inl  vec4.inl
src/: pch.h
tests/: CMakeLists.txt
tests/src/: math_tests.cpp
